# langchain_project

./: main.py  pyproject.toml
agentExercise/: 01_search_agent.py  02_react_multiple_tools.py  03_agent_reactloop.py  04_agent_loop_raw_function.py
exercise/: 01_prompt_templates.py  02_ollama_basic.py  03_grog_model_switching.py
